# crdt-kit

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml  docs.yml
crates/crdt-kit/: Cargo.toml
crates/crdt-kit/benches/: comparative.rs  crdt_benchmarks.rs
crates/crdt-kit/examples/: chat.rs  counter.rs  ecommerce.rs  iot_dashboard.rs  todo_list.rs
crates/crdt-kit/fuzz/: Cargo.toml
crates/crdt-kit/fuzz/fuzz_targets/: fuzz_aw_map.rs  fuzz_gcounter.rs  fuzz_lww_map.rs  fuzz_orset.rs  fuzz_rga.rs  fuzz_text.rs
crates/crdt-kit/src/: aw_map.rs  clock.rs  crdt.rs  gcounter.rs  gset.rs  lib.rs  lww_map.rs  lww_register.rs  mv_register.rs  or_set.rs  pncounter.rs  prelude.rs  rga.rs  rope.rs  text.rs  twop_set.rs  version.rs  wasm.rs
crates/crdt-kit/tests/: convergence.rs  proptest_crdts.rs
docs/: CASE_STUDY_IOT.md  EVALUATION.md  i18n.js  index.html  style.css
docs/src/components/: CoachingDemo.tsx  CodeBlock.astro  DeviceAnimation.astro  HomePage.astro  InteractiveDemo.tsx  MergeFlow.tsx  MergeVisualization.astro
docs/src/i18n/: translations.ts
docs/src/pages/: index.astro
docs/src/pages/en/: index.astro
docs/src/pages/es/: index.astro
docs/src/styles/: global.css
